@@ -1,4 +1,5 @@
 0.7.0
+* lbf: new module: lineair buffer (2008-05-29)
 * lxf: config.fs/make.fs/readme added (2008-05-23)
 * stc: bug fix in +field (2008-05-23)
 * gzf: new module: GZip file (2008-05-07)
